# Siamese-Neural-Networks-in-C-

./: CMakeLists.txt  Example of tracked video-test.mp4.avi  README.md  tracking.cpp
